# mlops-project

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  mlflow.db  pyproject.toml
configs/: data.yaml  export_onnx.yaml  infer.yaml  train.yaml
mlruns/0/: meta.yaml
mlruns/568001608828637308/: meta.yaml
mlruns/568001608828637308/07b1ca1cd11f48a594b4cc719c1a39e8/: meta.yaml
mlruns/568001608828637308/07b1ca1cd11f48a594b4cc719c1a39e8/metrics/: epoch
mlruns/568001608828637308/07b1ca1cd11f48a594b4cc719c1a39e8/tags/: mlflow.runName
mlruns/568001608828637308/609e3fbf56c44c98ab4c07db11cfffc5/: meta.yaml
mlruns/568001608828637308/609e3fbf56c44c98ab4c07db11cfffc5/metrics/: epoch
mlruns/568001608828637308/609e3fbf56c44c98ab4c07db11cfffc5/tags/: mlflow.runName  mlflow.source.name
mlruns/568001608828637308/b8838f9a2eb749e4bb3d27776bd6ce69/: meta.yaml
mlruns/568001608828637308/b8838f9a2eb749e4bb3d27776bd6ce69/metrics/: epoch
mlruns/568001608828637308/b8838f9a2eb749e4bb3d27776bd6ce69/tags/: mlflow.runName
mlruns/568001608828637308/fa32be10e65746e4a94f7636b90d5216/: meta.yaml
mlruns/568001608828637308/fa32be10e65746e4a94f7636b90d5216/metrics/: epoch  train_acc  train_f1  train_loss  val_acc  val_f1  val_loss
mlruns/568001608828637308/fa32be10e65746e4a94f7636b90d5216/tags/: mlflow.runName  mlflow.source.git.commit
outputs/2025-06-05/12-08-23/.hydra/: config.yaml  hydra.yaml
outputs/2025-06-05/12-52-41/: checkpoints.dvc
plants_classification/: data.py  export_onnx.py  infer.py  train.py
plants_classification/checkpoints/: .gitignore  flower-resnet50-epoch=05-val_loss=2.49.ckpt.dvc
(+63 files in other folders)
